# smallcase-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
smallcase_mcp/: __init__.py  client.py  server.py
tests/: test_live.py  test_mcp_protocol.py
